[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghopper"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A command-line tool for GitHub operations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sumann7916/ghopper"
"Bug Tracker" = "https://github.com/sumann7916/ghopper/issues"

[project.scripts]
ghopper = "ghopper.cli:cli"
